# tmp-umu-nlp-lab3

./: .gitattributes  README.md  docker-compose.yml  pyproject.toml  ruff.toml  run_instruct_llm.py  run_pooling.py  run_random_embeddings.py  run_static_contextual.py  simple.csv  static_contextual.csv
data/: dataset.1  dataset.diff  reviews-dev.txt  reviews-train.txt
src/nn/: config.py  contextual_classifier.py  datasets.py  deep_classifier.py  modules.py  simple_classifier.py  todo.md
src/utils/: __init__.py  integrations.py  io_functions.py
