[project]
name = "umu-nlp-lab3"
version = "0.3.0"
description = "Imlement NLP Neural Networks and evaluate their architecture using f1 scoring on NewsGroup dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "pydantic",
    "requests>=2.32.4",
    "fastapi[standard]>=0.116.1",
    "marimo>=0.18.2",
    "scikit-learn>=1.7.2",
    "nltk>=3.9.2",
    "tqdm>=4.67.1",
    "mcp>=1.23.1",
    "openai>=2.9.0",
    "numpy",
    "matplotlib>=3.10.7",
    "torch",
    "polars>=1.35.2",
    "python-lsp-server>=1.14.0",
    "websockets>=15.0.1",
    "altair>=6.0.0",
    "duckdb>=1.4.2",
    "sqlglot>=28.1.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "gensim>=4.4.0",
    "transformers>=4.47.0",
    "bitsandbytes>=0.45.0",
    "accelerate>=1.12.0",
    "torchvision",
    "datasets>=4.4.1",
    "tenacity>=9.1.2",
    "openrouter>=0.1.1",
    "huggingface-hub>=0.36.0",
    "vllm>=0.6.6",
    "tiktoken>=0.12.0",
]
[tool.ty.rules]
index-out-of-bounds = "ignore"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "commitizen>=3.27.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
    "ty>=0.0.1a32",
]
test = [
    "ruff>=0.7.4",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
